2004-02-03  Anders Carlsson  <andersca@gnome.org>

	* configure.in: Release 2.5.4

	* schemas/Makefile.am (install-data-local): Revert fix 
	since it broke distcheck

2004-01-23  Jody Goldberg <jody@gnome.org>

	* libgnome/gnome-program.c : Add missing #include <locale.h> so that
	  things compile.

2004-01-21  Anders Carlsson  <andersca@gnome.org>

	* libgnome/gnome-program.c: (gnome_program_preinit):
	Translate strings instead of just marking them.
	(Completely fixes #106549, patch by Christian Neumair).
	
2004-01-21  Anders Carlsson  <andersca@gnome.org>

	* libgnome/gnome-init.c: (libgnome_module_info_get):
	* libgnome/gnome-program.c: (gnome_program_parse_args):
	Fix translation of program arguments. 
	(#106549, patch by Hidetoshi Tajima).
	
2004-01-18  Jason Leach  <leach@wam.umd.edu>

	* schemas/Makefile.am (install-data-local): builddir != srcdir fix.

2004-01-15  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-config.h: Merge fix for bug #129744.

2004-01-14  Anders Carlsson  <andersca@gnome.org>

	* configure.in: Release 2.5.3

2003-12-28  Anders Carlsson  <andersca@gnome.org>

	* configure.in: Release 2.5.2

2003-12-08  Anders Carlsson  <andersca@gnome.org>

	* configure.in: Release 2.5.1

2003-12-05  Mark McLoughlin  <mark@skynet.ie>

	* schemas/Makefile.am,
	  schemas/desktop_gnome_url_handlers.schemas.in:
	Remove the url_hanlders schemas. They've been moved
	to gnome-vfs.

2003-11-24  Anders Carlsson  <andersca@gnome.org>

	* configure.in: Release 2.5.0

2003-10-27   Mark Finlay <sisobATtuxfamilyDOTorg>

	* schemas/desktop_gnome_background.schemas.in:
	Change default background color.

2003-09-23  Hidetoshi Tajima  <hidetoshi.tajima@sun.com>

	* libgnome/gnome-init.c: make --help work with popt-1.7.
	Fix bug 123052.

2003-09-01  Anders Carlsson  <andersca@gnome.org>

	* configure.in: Release 2.4.0

	* schemas/Makefile.am (schema_in_files): Ship
	.schemas in tarball since that's what everyone else is doing.
