@@ -21,6 +21,7 @@ schemas/desktop_gnome_applications_window_manager.schemas.in
 schemas/desktop_gnome_background.schemas.in
 schemas/desktop_gnome_file_views.schemas.in
 schemas/desktop_gnome_interface.schemas.in
+schemas/desktop_gnome_lockdown.schemas.in
 schemas/desktop_gnome_peripherals_keyboard.schemas.in
 schemas/desktop_gnome_peripherals_mouse.schemas.in
 schemas/desktop_gnome_sound.schemas.in
