@@ -1,0 +1,69 @@
+<?xml version="1.0"?>
+<gconfschemafile>
+  <schemalist>
+
+    <schema>
+      <key>/schemas/desktop/gnome/lockdown/disable_command_line</key>
+      <applyto>/desktop/gnome/lockdown/disable_command_line</applyto>
+      <owner>gnome</owner>
+      <type>bool</type>
+      <default>false</default>
+      <locale name="C">
+        <short>Disable command line</short>
+        <long>
+          Prevent the user form accessing the terminal or specifying
+          a command line to be executed. For example, this would
+          disable access to the panel's "Run Application" dialog.
+        </long>
+      </locale>
+    </schema>
+
+    <schema>
+      <key>/schemas/desktop/gnome/lockdown/disable_save_to_disk</key>
+      <applyto>/desktop/gnome/lockdown/disable_save_to_disk</applyto>
+      <owner>gnome</owner>
+      <type>bool</type>
+      <default>false</default>
+      <locale name="C">
+        <short>Disable saving files to disk</short>
+        <long>
+          Prevent the user from saving files to disk. For example,
+          this would disable access to all application's "Save as"
+          dialogs.
+        </long>
+      </locale>
+    </schema>
+
+    <schema>
+      <key>/schemas/desktop/gnome/lockdown/disable_printing</key>
+      <applyto>/desktop/gnome/lockdown/disable_printing</applyto>
+      <owner>gnome</owner>
+      <type>bool</type>
+      <default>false</default>
+      <locale name="C">
+        <short>Disable printing</short>
+        <long>
+          Prevent the user from printing. For example, this would
+          disable access to all application's "Print" dialogs.
+        </long>
+      </locale>
+    </schema>
+
+    <schema>
+      <key>/schemas/desktop/gnome/lockdown/disable_print_setup</key>
+      <applyto>/desktop/gnome/lockdown/disable_print_setup</applyto>
+      <owner>gnome</owner>
+      <type>bool</type>
+      <default>false</default>
+      <locale name="C">
+        <short>Disable print setup</short>
+        <long>
+         Prevent the user from modifying print settings. For example,
+         this would disable access to all application's "Print Setup"
+         dialogs.
+        </long>
+      </locale>
+    </schema>
+
+  </schemalist>
+</gconfschemafile>
