@@ -1,3 +1,7 @@
+2004-02-05  Mark McLoughlin  <mark@skynet.ie>
+
+	* POTFILES.in: add schemas/desktop_gnome_lockdown.schemas.in
+
 2004-02-02 Alastair McKinstry <mckinstry@computer.org>
 
 	* ga.po: Updated Irish translation.
