@@ -1,3 +1,8 @@
+2004-02-05  Mark McLoughlin  <mark@skynet.ie>
+
+	* schemas/desktop_gnome_lockdown.schemas.in:
+	Add lockdown schemas.
+
 2004-02-03  Anders Carlsson  <andersca@gnome.org>
 
 	* configure.in: Release 2.5.4
